# deep-ai-agentic-research

./: pyproject.toml  pyrightconfig.json  requirements.txt
data/: reports.db  writing_agent_instructions.md
data/reports/: report_20260627_093129_IndiaNew_Zealand_trade_deal_20.docx  report_20260627_111448_India_Ayodhya_temple_donation.docx  report_20260627_120239_India_Madhya_Pradesh_CM_Mohan.docx
main/: app.py  database.py  deep_research.py  doc_export_agent.py  email_agent.py  planner_agent.py  research_manager.py  search_agent.py  styled_writer_agent.py  writer_agent.py
