[project]
name = "deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.19.0",
    "ipykernel>=7.3.0",
    "ipython>=9.15.0",
    "openai>=2.44.0",
    "openai-agents>=0.17.7",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-docx>=1.1.0",
    "sendgrid>=6.12.5",
    "tavily-python>=0.7.26",
]

[tool.pyright]
extraPaths = ["main"]

